# anaf-sync

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-tray.yml  release.yml
design/: README.md  tray-ui-implementation-plan.md
design/mockup/: anaf-sync Mockup.dc.html  mockup.html
packaging/: tray.spec  tray_entry.py
src/anaf_sync/: __init__.py  autostart.py  cli.py  config.py  context.py  engine.py  health.py  lock.py  logsink.py  scheduling.py  state.py  template.py
src/anaf_sync/tray/: __init__.py  app.py  calendar.py  config_io.py  delegates.py  details.py  flowgrid.py  format.py  icons.py  models.py  preview.py  runner.py  settings_view.py  settings_window.py  status.py  store.py  strings.py  template_help.py  theme.py  watcher.py  window.py
tests/: conftest.py  sample_data.py  test_autostart.py  test_cli.py  test_config.py  test_context.py  test_engine.py  test_health.py  test_lock.py  test_logsink.py  test_scheduling.py  test_state.py  test_sync_live.py  test_template.py  test_tray_config_io.py  test_tray_facturi.py  test_tray_format.py  test_tray_guard.py  test_tray_preview.py  test_tray_qt.py  test_tray_settings.py  test_tray_settings_window.py  test_tray_status.py  test_tray_strings.py  test_tray_template_help.py
