[project]
name = "anaf-sync"
version = "0.2.1"
description = "Scheduled local archiver for RO e-Factura invoices, built on anafpy."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Robert Malai", email = "rmalai@trocglobal.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "anafpy>=0.5.1",
    "cyclopts>=3.14",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "platformdirs>=4.2",
    # Native log sinks for scheduled runs (logsink.py); journald needs nothing.
    "pyoslog>=1.0 ; sys_platform == 'darwin'",
    "pywin32>=306 ; sys_platform == 'win32'",
    "filelock>=3.13",
]

[project.optional-dependencies]
# The desktop tray companion (anaf_sync.tray). Optional so the core CLI stays
# GUI-free: `pip install "anaf-sync[tray]"` pulls Qt only when the UI is wanted.
tray = [
    "pyside6>=6.7",
    "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/robert-malai/anaf-sync"

[project.scripts]
anaf-sync = "anaf_sync.cli:main"
# The guard in `anaf_sync/tray/__init__.py`: prints an install hint (never a
# traceback) when the `tray` extra / PySide6 is absent, then delegates to app.
anaf-sync-tray = "anaf_sync.tray:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "types-pywin32>=306",
    "ruff>=0.6",
    "black>=24.0",
]
# pytest-qt lives in its own group, not `dev`: it hard-errors at startup when no
# Qt binding is installed, so it must only be present alongside the `tray` extra.
# Full dev / the tray CI job: `uv sync --extra tray --group qt`. A plain
# `uv sync` gets neither, and the tray tests skip via `importorskip` on whichever
# part of the extra they need — "PySide6" for the Qt views, "tomlkit" for the
# Qt-free config round-trip.
qt = ["pytest-qt>=4.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anaf_sync"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
# Qt overrides (rowCount, fetchMore, paintCell, …) must keep their camelCase
# names to bind to the C++ virtuals; the naming rule cannot apply in the tray.
"src/anaf_sync/tray/*.py" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

# The tray extra is optional: keep `mypy src` green whether or not PySide6 /
# tomlkit are installed. Our own defs stay fully typed; Qt is treated as Any at
# the edges (the plan allows isolated ignores only at signal/slot friction).
[[tool.mypy.overrides]]
module = ["PySide6.*", "tomlkit.*", "shiboken6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: exercises the real ANAF production endpoints, strictly read-only (needs .env + `anafpy auth login`); opt in with ANAFPY_LIVE=1",
]

[tool.coverage.run]
source = ["anaf_sync"]
